--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -1,26 +1,49 @@
 \section{Data}
 \label{appendix:Data}
 \subsection{Computational Accuracy}
-\begin{table}[ht]
-    \centering
-    \begin{tabular}{|l|l|l|l|}
-    \hline
+
+\begin{table}[]
+    \begin{tabular}{@{}l|llll@{}}
+    \toprule
     Test                                  & 2to3 Translation                      & Python 2 Output                               & 2to3 Translation Output                       \\ \hline
-    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1, 1+1, 1+1+1)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
-    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1, 2)                          | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | \\ \hline
-    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
-    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1); print()                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| \\ \hline
-    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(); print(1);                   | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| \\ \hline
-    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,   1+1,   1+1+1)             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
-    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '                             | \\ \hline
-    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ')                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ \hline
-    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1, end=' ')                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'1 '                                 | \\ \hline
-    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1, 2, 3))                     | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | \\ \hline
-    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'()\n'                | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
-    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print('')                            | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
-    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
-    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ', file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2'                                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ \hline
-    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | \\ \hline
-    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
+    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1, 1+1, 1+1+1)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ 
+    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1, 2)                          | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | \\ 
+    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ 
+    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1); print()                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| \\ 
+    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(); print(1);                   | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| \\ 
+    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,   1+1,   1+1+1)             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ 
+    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '                             | \\ 
+    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ')                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ 
+    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1, end=' ')                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'1 '                                 | \\ 
+    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1, 2, 3))                     | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | \\ 
+    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'()\n'                | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ 
+    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print('')                            | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ 
+    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ 
+    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ', file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2'                                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ 
+    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | \\ 
+    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}[]
+    \begin{tabular}{@{}l|lll@{}}
+    \toprule
+    Test                                  & fix\_print Translation                        & Python 2 Output                        & fix\_print Output             \\ \midrule
+    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                           | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'   |           & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | \\
+    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1,2)                                   | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'  |              & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'      | \\
+    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                                      | & \lstinline[language=Python, style=pythonstyle]|b'\n'   |                & \lstinline[language=Python, style=pythonstyle]|b'\n'         | \\
+    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1;print)                               | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| & Error                         \\
+    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(;print1;)                              | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| & Error                         \\
+    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                           | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n' |             & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | \\
+    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,end=' ')                         | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '     |                \\
+    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ')                           | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'   |             & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                \\
+    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1,end=' ')                             | & \lstinline[language=Python, style=pythonstyle]|b'1\n'  |                & \lstinline[language=Python, style=pythonstyle]|b'1 '         |                \\
+    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1,2,3))                               | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'  |        & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'| \\
+    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print(())                                    | & \lstinline[language=Python, style=pythonstyle]|b'()\n'   |              & \lstinline[language=Python, style=pythonstyle]|b'()\n'       | \\
+    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print((''))                                  | & \lstinline[language=Python, style=pythonstyle]|b'\n' |                  & \lstinline[language=Python, style=pythonstyle]|b'\n'         | \\
+    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,file=sys.stderr)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    |          & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | \\
+    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ',file=sys.stderr)           | & \lstinline[language=Python, style=pythonstyle]|b'1 2'|                                 & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                \\
+    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1,file=sys.stderr)                   | & \lstinline[language=Python, style=pythonstyle]|b'2\n' |                 & \lstinline[language=Python, style=pythonstyle]|b'2\n'        | \\
+    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(>>sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'\n'|                   & Error                         \\ \bottomrule
     \end{tabular}
 \end{table}
