--- a/paper/main.tex
+++ b/paper/main.tex
@@ -7,7 +7,8 @@
 \lstdefinestyle{pythonstyle}{
     keywordstyle=\color{orange},
     stringstyle=\color{green},
-    basicstyle=\ttfamily\small
+    basicstyle=\ttfamily\small,
+    showstringspaces=false
 }
 
 \title{Formal Verification of a Python 2 to 3 Transpiler}
