--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -1,5 +1,24 @@
 \section{Results}
 
 \subsection{Accuracy}
+\begin{table*}[ht]
+    \begin{tabular}{@{}l|lll@{}}
+    \toprule
+    Translator & Overall Computational Accuracy & Computation Accuracy Without Trailing Comma Tests & Computation Accuracy Without Trailing Comma and Multiple Print Statements Tests \\ \midrule
+    2to3       & 0.69                         & 0.92                                      & 0.90                                                                             \\
+    fix\_print & 0.62                          & 0.83                                      & 1.0                                                                               \\ \bottomrule
+    \end{tabular}
+\end{table*}
+
+Overall, when all tests are taken into consideration, 2to3 outperforms fix\_print in terms of computational accuracy, although the two translators are fairly close in accuracy.
+
+However, during testing, it was discovered that the version of Python 2 (the \verb|python2-bin| package in the Arch User Repository (AUR), a collection of software packages intended for users of the Arch Linux operating system, the platform used during testing) used in testing was bugged. Trailing commas at the end of print statements should result in a newline character --- special character that tells the computer to move to a new line, similar in effect to hitting enter on a keyboard --- not being printed, which is what the Python 2 documentation states is the intended behavior, and which therefore both 2to3 and fix\_print attempt to replicate when translating. However, the version of Python 2 used outputted a newline character even when a trailing comma was present, contrary to its documented behavior, thus rendering otherwise correct translation from both translators incorrect. Therefore, for more accurate results, the accuracy of both translators excluding tests with trailing commas was calculated as well.
+
+Excluding the trailing comma tests, 2to3 was still more accurate than fix\_print. However, there were two tests that were unique within the test suite, as they contained multiple print statements instead of the one a single one, as every other test did. As fix\_print was only specified to translate single print statements, it naturally produced an incorrect translation for these two tests. However, when these two tests are excluded, fix\_print actually attains a higher accuracy than 2to3, due to the fact that 2to3 failed the \verb|test\_idempotency| test where fix\_print did not. In Python 2, "print ()" outputs "()", as the empty parenthesis represent an empty tuple, which is a special type of list in Python. To replicate this behavior, the correct Python 3 translation should be "print(())", as Python 3 print statements require an extra pair of parentheses around whatever content is to be outputted. fix\_print is specified to always do as such, however in this case 2to3 translated "print ()" as "print()", which is incorrect as its translate simply prints nothing, as there is no content within the parentheses.
+
+** Discussion about FV effectivesness here
 
 \subsection{Performance}
+
+The performance of fix\_print was much faster than 2to3, with fix\_print being around two orders of magnitude faster than 2to3.
+** Analysis of (lack of) significance of performance data here
