--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -8,6 +8,7 @@
     2to3       & 0.69                         & 0.92                                      & 0.90                                                                             \\
     fix\_print & 0.62                          & 0.83                                      & 1.0                                                                               \\ \bottomrule
     \end{tabular}
+    \caption{Computational accuracy of 2to3 and fix\_print.}
 \end{table*}
 
 Overall, when all tests are taken into consideration, 2to3 outperforms fix\_print in terms of computational accuracy, although the two translators are fairly close in accuracy.
