--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -23,6 +23,7 @@
     test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | \\ 
     test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \bottomrule
     \end{tabular}
+    \caption{2to3 translation and output of translated code for each test.}
 \end{table}
 
 \begin{table}[ht]
@@ -46,6 +47,7 @@
     test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1,file=sys.stderr)                   | & \lstinline[language=Python, style=pythonstyle]|b'2\n' |                 & \lstinline[language=Python, style=pythonstyle]|b'2\n'        | \\
     test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(>>sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'\n'|                   & Error                         \\ \bottomrule
     \end{tabular}
+    \caption{fix\_print translation and output of translated code for each test.}
 \end{table}
 
 \subsection{Performance}
@@ -53,7 +55,7 @@
 \begin{table}[h]
     \begin{tabular}{@{}l|llllll@{}}
     \cmidrule(r){1-6}
-    Test                                  & 2to3 Run Time 1 (ms) & 2to3 Run Time 2 (ms) & 2to3 Run Time 3 (ms) & 2to3 Run Time 4 (ms) & 2to3 Run Time 5 (ms) & 2to3 Average Run Time (ms) \\ \cmidrule(r){1-6}
+    Test                                  & 2to3 Run Time 1 (ms) & 2to3 Run Time 2 (ms) & 2to3 Run Time 3 (ms) & 2to3 Run Time 4 (ms) & 2to3 Run Time 5 (ms) & 2to3 Mean Run Time (ms) \\ \cmidrule(r){1-6}
     test\_1                               & 274                  & 307                  & 274                  & 255                  & 255                  & 273                        \\
     test\_2                               & 246                  & 249                  & 269                  & 253                  & 251                  & 253.6                      \\
     test\_3                               & 256                  & 261                  & 248                  & 268                  & 278                  & 262.2                      \\ \cmidrule(r){1-6}
@@ -71,6 +73,7 @@
     test\_no\_trailing\_comma             & 255                  & 260                  & 314                  & 337                  & 285                  & 290.2                      \\
     test\_spaces\_before\_file            & 268                  & 329                  & 257                  & 276                  & 322                  & 290.4                     
     \end{tabular}
+    \caption{Run times of 2to3 for each test and their means.}
 \end{table}
 
 \begin{table}[]
@@ -94,4 +97,5 @@
     test\_no\_trailing\_comma             & 3                          & 4                          & 3                          & 3                          & 4                          & 3.4                              \\
     test\_spaces\_before\_file            & 3                          & 3                          & 4                          & 4                          & 4                          & 3.6                             
     \end{tabular}
+    \caption{Run times of fix\_print for each test and their means.}
 \end{table}
