--- a/paper/main.tex
+++ b/paper/main.tex
@@ -11,14 +11,14 @@
     showstringspaces=false
 }
 
-\title{Formal Verification of a Python 2 to 3 Transpiler}
+\title{Formal Verification of Translations From Python 2 to 3}
 
 \begin{document}
 \maketitle
 
-\input{Introduction}
-\input{Literature Review}
-\input{Methodology}
+% \input{Introduction}
+% \input{Literature Review}
+% \input{Methodology}
 \input{Results}
 
 \printbibliography
